tests/expectations/compiler/function/unknown_parameter_type_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372017]: The type `Foo` is not found in the current scope.
    --> compiler-test:4:28
     |
   4 |     transition main(a: u8, foo: Foo) -> u8 {
     |                            ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `Foo` is not found in the current scope.
    --> compiler-test:8:38
     |
   8 |     transition returns_foo(a: u8) -> Foo {
     |                                      ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372003]: Expected type `Foo` but type `u8` was found
    --> compiler-test:9:16
     |
   9 |         return a;
     |                ^
"""]
